--- a/.github/workflows/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/.github/workflows/firebase-deploy.yml
@@ -3,7 +3,7 @@ name: Firebase Deploy
 on:
   push:
     branches:
-      - main  # Set this to your main branch
+      - main  # Adjust this to your main branch
 
 jobs:
   build:
