--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -3,7 +3,7 @@ name: Firebase Deploy
 on:
   push:
     branches:
-      - main  # Adjust this to your main branch
+      - main
 
 jobs:
   build:
@@ -14,14 +14,19 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Use Node.js version 18
+          node-version: '18'
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      - name: Deploy to Firebase
+      - name: Setup Firebase Admin SDK
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_ADMIN_SDK_JSON }}
+        run: |
+          echo ${{ secrets.FIREBASE_ADMIN_SDK_JSON }} > ${HOME}/admin_sdk.json
+          export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/admin_sdk.json
+
+      - name: Deploy to Firebase
         run: firebase deploy --only hosting
