--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -3,7 +3,7 @@ name: Firebase Deploy
 on:
   push:
     branches:
-      - main
+      - main  # Adjust this to your main branch
 
 jobs:
   build:
@@ -23,9 +23,9 @@ jobs:
 
       - name: Setup Firebase Admin SDK
         env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_ADMIN_SDK_JSON }}
+          FIREBASE_ADMIN_SDK_JSON: ${{ secrets.FIREBASE_ADMIN_SDK_JSON }}
         run: |
-          echo ${{ secrets.FIREBASE_ADMIN_SDK_JSON }} > ${HOME}/admin_sdk.json
+          echo "${{ secrets.FIREBASE_ADMIN_SDK_JSON }}" > ${HOME}/admin_sdk.json
           export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/admin_sdk.json
 
       - name: Deploy to Firebase
