--- a/.github/workflows/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/.github/workflows/firebase-deploy.yml
@@ -14,14 +14,19 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'  # Use the Node.js version required by Firebase CLI
+          node-version: '18'
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      - name: Deploy to Firebase
+      - name: Setup Firebase Admin SDK
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: firebase deploy --only hosting
+          FIREBASE_ADMIN_SDK_JSON: ${{ secrets.FIREBASE_ADMIN_SDK_JSON }}
+        run: |
+          echo "${{ secrets.FIREBASE_ADMIN_SDK_JSON }}" > ${HOME}/admin_sdk.json
+          export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/admin_sdk.json
+
+      - name: Deploy to Firebase
+        run: firebase deploy --only hosting --project Y52672873969
